# jwt-kos

./: .gitignore  AUTHORS  CHANGELOG.md  LICENSE  README.md  THIRD-PARTY-NOTICES.txt
include/jwt/: jwt.hpp
kos/example/: CMakeLists.txt  README.md  cross-build.sh
kos/example/einit/: CMakeLists.txt
kos/example/einit/psl/: security.psl.in
kos/example/einit/src/: init.yaml.in
kos/example/resources/edl/: TokenService.edl  WebServer.edl
kos/example/resources/hdd/certs/: server.crt  server.key
kos/example/resources/hdd/etc/: dhcpcd.conf  hosts
kos/example/resources/hdd/www/: index.html  styles.css
kos/example/resources/idl/: IToken.idl
kos/example/resources/include/: common.h  connections.h
kos/example/token_service/: CMakeLists.txt
kos/example/token_service/include/: general.h  server.h  token_handler.h
kos/example/token_service/src/: main.cpp  server.cpp  token_handler.cpp
kos/example/utils/: utils.cpp  utils.h
kos/example/web_server/: .cproject  CMakeLists.txt
kos/example/web_server/include/: general.h  get_data_handler.h  get_token_handler.h  i_tokenreader.h  kos_connector.h  logger.h
kos/example/web_server/src/: get_data_handler.cpp  get_token_handler.cpp  kos_connector.cpp  logger.cpp  main.cpp
kos/unittests/: CMakeLists.txt  README.md  cross-build.sh
kos/unittests/einit/: CMakeLists.txt
kos/unittests/einit/psl/: security.psl.in
kos/unittests/einit/src/: init.yaml.in
kos/unittests/tests/: CMakeLists.txt
kos/unittests/tests/src/: main.cpp
tests/: test_jwt_es.cc  test_jwt_rsa.cc
